added meta tags for twitter card

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
-  <title>TTRPG character sheet</title>
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@KuluGary" />
+  <meta name="twitter:title" content="Gary Cuétara">
+  <meta name="twitter:description" content="Aplicación web para generar fichas de personaje de juegos de rol de mesa.">
+  <meta name="twitter:image" content="https://kulugary.github.io/assets/twitter-image.jpg">
+  <title>EG Character sheet generator.</title>
 </head>
 
 <body>
