--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@KuluGary" />
-  <meta name="twitter:title" content="Gary Cuétara">
+  <meta name="twitter:title" content="Character Sheet Generator">
   <meta name="twitter:description" content="Aplicación web para generar fichas de personaje de juegos de rol de mesa.">
   <meta name="twitter:image" content="https://kulugary.github.io/assets/twitter-image.jpg">
   <title>EG Character sheet generator.</title>
