--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="twitter:title" content="Character Sheet Generator">
   <meta name="twitter:description" content="Aplicación web para generar fichas de personaje de juegos de rol de mesa.">
   <meta name="twitter:image" content="https://kulugary.github.io/assets/twitter-image.jpg">
-  <title>EG Character sheet generator.</title>
+  <title>Character sheet generator</title>
 </head>
 
 <body>
